--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".register.RegisterActivity3" />
         <activity android:name=".register.RegisterActivity2" />
         <activity android:name=".register.RegisterActivity1" />
+        <activity android:name=".infoGroup.InfoGroupActivity"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
