--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,20 @@
     package="com.doubleslash.playground">
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:usesCleartextTraffic="true"
-
+        android:requestLegacyExternalStorage="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:grantUriPermissions="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="true" />
         <activity android:name=".chat.ChatActivity"></activity>
         <activity android:name=".register.RegisterActivity7" />
         <activity android:name=".register.RegisterActivity6" />
@@ -22,6 +26,7 @@
         <activity android:name=".register.RegisterActivity2" />
         <activity android:name=".register.RegisterActivity1" />
         <activity android:name=".infoGroup.InfoGroupActivity"/>
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
