--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.doubleslash.playground">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
         android:fullBackupContent="false"
-        android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="true"
-
-        android:requestLegacyExternalStorage="true"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:grantUriPermissions="true"
-        android:theme="@style/AppTheme">
-        <meta-data android:name="unityplayer.SkipPermissionsDialog" android:value="true" />
+        android:icon="@mipmap/ic_icon"
+        android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
+        android:roundIcon="@mipmap/ic_icon_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".profile.Profileothers" />
+
+        <meta-data
+            android:name="unityplayer.SkipPermissionsDialog"
+            android:value="true" />
+
         <activity android:name=".FindGroupActivity" />
         <activity android:name=".CreateGroupActivity" />
-        <activity android:name=".chat.ChatActivity"></activity>
+        <activity android:name=".chat.ChatActivity" />
         <activity android:name=".register.RegisterActivity7" />
         <activity android:name=".register.RegisterActivity6" />
         <activity android:name=".register.RegisterActivity5" />
@@ -31,8 +34,7 @@
         <activity android:name=".register.RegisterActivity3" />
         <activity android:name=".register.RegisterActivity2" />
         <activity android:name=".register.RegisterActivity1" />
-        <activity android:name=".infoGroup.InfoGroupActivity"/>
-
+        <activity android:name=".infoGroup.InfoGroupActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,11 +47,9 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="1" />
