--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.doubleslash.playground">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:fullBackupContent="false"
-        android:grantUriPermissions="true"
         android:icon="@mipmap/ic_icon"
-        android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
+
         android:requestLegacyExternalStorage="true"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_icon_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".profile.Profileothers" />
+        android:grantUriPermissions="true"
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="unityplayer.SkipPermissionsDialog"
@@ -34,7 +35,10 @@
         <activity android:name=".register.RegisterActivity3" />
         <activity android:name=".register.RegisterActivity2" />
         <activity android:name=".register.RegisterActivity1" />
-        <activity android:name=".infoGroup.InfoGroupActivity" />
+        <activity android:name=".infoGroup.InfoGroupActivity"/>
+        <activity android:name=".profile.ProfileOtherActivity"/>
+        <activity android:name=".infoGroup.JoinAcceptActivity"/>
+
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,9 +51,11 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorAccent" />
+
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="1" />
